tests/cases/traits/errors/trait-object-ref-mut-source.ari
trait Score {
}

fn main() -> i64 {
  let number = 7i64;
  let object: ref mut dyn Score = (ref number) as ref mut dyn Score;
  return 0;
}
